drop News banner from all websites - F26 is not new anymore

--- a/alt.fedoraproject.org/data/content/index.html
+++ b/alt.fedoraproject.org/data/content/index.html
@@ -25,7 +25,7 @@
     </div>
   </header>
 
-  <!-- News -->
+  <!-- News
   <py:choose>
     <py:when test="global_variables.release['curr_state'] == 'Alpha'">
       <div class="newsbox">
@@ -61,6 +61,7 @@
       </div>
     </py:otherwise>
   </py:choose>
+  -->
 
   <!-- Network Installers -->
   <div class="jumbotron main-head hidden-xs hidden-sm">
