--- a/getfedora.org/data/content/index.html
+++ b/getfedora.org/data/content/index.html
@@ -21,7 +21,7 @@
     </div>
   </div>
 
-  <!-- News -->
+  <!-- News
   <py:choose>
     <py:when test="global_variables.release['curr_state'] == 'Alpha'">
       <div class="newsbox">
@@ -59,6 +59,7 @@
       </div>
     </py:otherwise>
   </py:choose>
+  -->
 
    <header id="head">
       <div id="product-logo-row row">
