--- a/labs.fedoraproject.org/data/content/index.html
+++ b/labs.fedoraproject.org/data/content/index.html
@@ -11,7 +11,7 @@
 <body class="home">
 <xi:include href="../templates/head.html" />
 
-  <!-- News
+  <!-- News -->
   <py:choose>
     <py:when test="global_variables.release['curr_state'] == 'Alpha'">
       <div class="newsbox">
@@ -47,7 +47,6 @@
       </div>
     </py:otherwise>
   </py:choose>
-  -->
 
   <!-- Labs Screenshots -->
   <header id="head" class="main-head">
