add google verification code for webmaster tools -- note that this is NOT for advertising or tracking or anything. it just will help us control how fedora shows up in search results

--- a/fedoraproject.org/data/content/index.html
+++ b/fedoraproject.org/data/content/index.html
@@ -45,6 +45,7 @@ if global_variables.release['curr_state'] == "Beta":
   xmlns:xi="http://www.w3.org/2001/XInclude">
   <xi:include href="../templates/oldmaster.html" />
   <head>
+    <meta name="google-site-verification" content="zS_dIege-8S1nc9rcJm9FoDuNtuz4n9sAgvfUavuY5Q" />
     <title>${Markup(_('Fedora Project Homepage'))}</title>
   </head>
   <body id="fedoraproject-org" class="lang-${lang}" onload="noscript()">
