--- a/getfedora.org/data/content/index.html
+++ b/getfedora.org/data/content/index.html
@@ -5,6 +5,7 @@
   xmlns:xi="http://www.w3.org/2001/XInclude">
   <xi:include href="../templates/master.html" />
   <head>
+    <meta name="google-site-verification" content="Y8U0Dp671E-xvxbGwhu9BIXMx2ogIBsCHt-Pjg7Rr3k" />
     <title>${_('Fedora')}</title>
   </head>
 
