I want to see what happens to traffic if we have more marketing buzz in our page titles.

--- a/getfedora.org/data/content/atomic/index.html
+++ b/getfedora.org/data/content/atomic/index.html
@@ -5,7 +5,7 @@
   xmlns:xi="http://www.w3.org/2001/XInclude">
   <xi:include href="../../templates/master.html" />
   <head>
-    <title>${_('Fedora Atomic')}</title>
+    <title>${_('Get Fedora Atomic: the best platform for your containerized applications stack')}</title>
   </head>
   <body id="cloud">
 
