--- a/getfedora.org/data/content/index.html
+++ b/getfedora.org/data/content/index.html
@@ -6,7 +6,7 @@
   <xi:include href="../templates/master.html" />
   <head>
     <meta name="google-site-verification" content="Y8U0Dp671E-xvxbGwhu9BIXMx2ogIBsCHt-Pjg7Rr3k" />
-    <title>${_('Fedora')}</title>
+    <title>${_('Get Fedora: download our Linux-based OS for developer desktops, running containers, and more')}</title>
   </head>
 
   <body class="home">
