--- a/getfedora.org/data/content/server/index.html
+++ b/getfedora.org/data/content/server/index.html
@@ -5,7 +5,7 @@
   xmlns:xi="http://www.w3.org/2001/XInclude">
   <xi:include href="../../templates/master.html" />
   <head>
-    <title>${_('Fedora Server')}</title>
+    <title>${_('Get Fedora Server: the latest tech for your apps and services')}</title>
   </head>
   <body id="server">
 
