--- a/getfedora.org/data/content/workstation/index.html
+++ b/getfedora.org/data/content/workstation/index.html
@@ -5,7 +5,7 @@
   xmlns:xi="http://www.w3.org/2001/XInclude">
   <xi:include href="../../templates/master.html" />
   <head>
-    <title>${_('Fedora Workstation')}</title>
+    <title>${_('Get Fedora Workstation: the best desktop OS for software developers')}</title>
   </head>
   <body id="workstation">
 
