--- a/alt.fedoraproject.org/data/content/verify.html
+++ b/alt.fedoraproject.org/data/content/verify.html
@@ -115,7 +115,7 @@
             <pre class="command">$ sha256sum -c *-CHECKSUM</pre>
             <p>${Markup(_('If the output states that the file is valid, then it\'s ready to use!'))}</p>
 	    <h3 class="top-margin">${_('How do I verify my downloaded image on another operating system?')}</h3>
-	    <p><a href="http://docs.fedoraproject.org/en-US/Fedora/${global_variables.release['curr_id']}/html/Installation_Guide/sect-verifying-images.html">${_('Read these instructions to validate your image.')}</a></p>
+	    <p><a href="http://https://docs.fedoraproject.org/f26/install-guide/install/Preparing_for_Installation.html#sect-verifying-images">${_('Read these instructions to validate your image.')}</a></p>
         </div>
     </div>
   </div>
