--- a/labs.fedoraproject.org/data/content/python-classroom/download/index.html
+++ b/labs.fedoraproject.org/data/content/python-classroom/download/index.html
@@ -110,17 +110,17 @@
   	  <div class="col-xs-12 text-center">
   	  	<h2>${_('Downloading')}</h2>
 	      <p class="text-justify">${_('Lab downloads are offered via direct download, but you can also get them via BitTorrent. In this case you will need to install a BitTorrent client in order to download a lab. If you cannot use Bittorrent, some labs offer alternative download methods.')}</p>
-	      <p><a class="btn btn-primary" href="http://docs.fedoraproject.org/en-US/Fedora/20/html/Installation_Guide/ch-new-users.html#sn-howto-download" role="button">${_('Learn more')}</a></p>
+	      <p><a class="btn btn-primary" href="http://docs.fedoraproject.org/f26/install-guide/Downloading_Fedora.html#chap-downloading-fedora" role="button">${_('Learn more')}</a></p>
   	  </div>
   	  <div class="col-xs-12 text-center">
   	  	<h2>${_('Installing')}</h2>
 	      <p class="text-justify">${_('To install a lab, you run the lab on your computer and click the "Install to Hard Drive" link on the desktop. You\'ll be guided through the install process via a series of prompts.')}</p>
-	      <p><a class="btn btn-primary" href="http://docs.fedoraproject.org/en-US/Fedora/20/html/Burning_ISO_images_to_disc/" role="button">${_('Learn more')}</a></p>
+	      <p><a class="btn btn-primary" href="http://docs.fedoraproject.org/f26/install-guide/install/Preparing_for_Installation.html#sect-preparing-boot-media" role="button">${_('Learn more')}</a></p>
   	  </div>
   	  <div class="col-xs-12 text-center">
   	  	<h2>${_('Using')}</h2>
 	      <p class="text-justify">${_('After installing either the software bundle or the complete Fedora version you can run these tools by launching the applications that correspond with them.')}</p>
-	      <p><a class="btn btn-primary" href="http://docs.fedoraproject.org/en-US/Fedora/21/html/Installation_Guide/sect-installation-graphical-mode.html" role="button">${_('Learn more')}</a></p>
+	      <p><a class="btn btn-primary" href="http://docs.fedoraproject.org/f26/install-guide/install/Installing_Using_Anaconda.html" role="button">${_('Learn more')}</a></p>
   	  </div>
   	</div>
 
@@ -141,13 +141,13 @@
   	</div>
   	<div class="row bottom-space hidden-xs">
   	  <div class="col-sm-4 text-center">
-	      <p><a class="btn btn-primary" href="http://docs.fedoraproject.org/en-US/Fedora/20/html/Installation_Guide/ch-new-users.html#sn-howto-download" role="button">${_('Learn more')}</a></p>
+	      <p><a class="btn btn-primary" href="http://docs.fedoraproject.org/f26/install-guide/Downloading_Fedora.html#chap-downloading-fedora" role="button">${_('Learn more')}</a></p>
   	  </div>
   	  <div class="col-sm-4 text-center">
-	      <p><a class="btn btn-primary" href="http://docs.fedoraproject.org/en-US/Fedora/21/html/Installation_Guide/sect-installation-graphical-mode.html" role="button">${_('Learn more')}</a></p>
+	      <p><a class="btn btn-primary" href="http://docs.fedoraproject.org/f26/install-guide/install/Installing_Using_Anaconda.html" role="button">${_('Learn more')}</a></p>
   	  </div>
   	  <div class="col-sm-4 text-center">
-	      <p><a class="btn btn-primary" href="http://docs.fedoraproject.org/en-US/Fedora/20/html/Burning_ISO_images_to_disc/" role="button">${_('Learn more')}</a></p>
+	      <p><a class="btn btn-primary" href="http://docs.fedoraproject.org/f26/install-guide/install/Preparing_for_Installation.html#sect-preparing-boot-media" role="button">${_('Learn more')}</a></p>
   	  </div>
   	</div>
   </div>
