--- a/alt.fedoraproject.org/data/content/prerelease/index.html
+++ b/alt.fedoraproject.org/data/content/prerelease/index.html
@@ -50,6 +50,7 @@
     <div class="container using">
       <div class="row">
         <div class="col-xs-12 top-margin">
+        <p class="warning">${_('Are you looking for 32 bit images for F27 Beta? Due to some technical issues we cannot offer them, but they will be available for the F27 final release date. Stay tuned!')}</p>
         <h2>${_('Network Installers')}<span class="prerelease-offer">${Markup(_('F%(rel)s %(state)s')) % {'rel':global_variables.release['next_id'], 'state':global_variables.release['curr_state']}}</span></h2>
         </div>
       </div>
@@ -86,7 +87,7 @@
             <p class="download"><a href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Workstation/x86_64/iso/Fedora-Workstation-netinst-x86_64-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso">${_('Download')}</a> | <a href="/static/checksums/Fedora-Workstation-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}-x86_64-CHECKSUM">${_('Verify')}</a></p>
             </div>
           </div>
-          <div class="white">
+<!--          <div class="white">
             <div class="col-md-1">
             <img src="/static/images/workstation.png" />
             </div>
@@ -99,7 +100,7 @@
             <div class="col-md-4">
             <p class="download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Workstation/i386/iso/Fedora-Workstation-netinst-i386-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso">${_('Download')}</a> | <a href="/static/checksums/Fedora-Workstation-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}-i386-CHECKSUM">${_('Verify')}</a></p>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
@@ -110,6 +111,7 @@
     <div class="container using">
       <div class="row">
         <div class="col-xs-12">
+        <p class="warning">${_('Are you looking for 32 bit images for F27 Beta? Due to some technical issues we cannot offer them, but they will be available for the F27 final release date. Stay tuned!')}</p>
         <h2>${_('Network Installers')}<span class="prerelease-offer">${Markup(_('F%(rel)s %(state)s')) % {'rel':global_variables.release['next_id'], 'state':global_variables.release['curr_state']}}</span></h2>
         </div>
       </div>
@@ -137,7 +139,7 @@
           <p class="download"><a href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Workstation/x86_64/iso/Fedora-Workstation-netinst-x86_64-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso">${_('Download')}</a> | <a href="/static/checksums/Fedora-Workstation-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}-x86_64-CHECKSUM">${_('Verify')}</a></p>
           </div>
         </div>
-        <div class="white">
+<!--        <div class="white">
           <div class="col-xs-3">
           <img src="/static/images/workstation.png" />
           </div>
@@ -145,7 +147,7 @@
           <h3>${_('Workstation')}</h3>
           <p class="download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Workstation/i386/iso/Fedora-Workstation-netinst-i386-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso">${_('Download')}</a> | <a href="/static/checksums/Fedora-Workstation-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}-i386-CHECKSUM">${_('Verify')}</a></p>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
@@ -155,6 +157,7 @@
     <div class="container using">
       <div class="row">
         <div class="col-xs-12">
+        <p class="warning">${_('Are you looking for 32 bit images for F27 Beta? Due to some technical issues we cannot offer them, but they will be available for the F27 final release date. Stay tuned!')}</p>
         <h2>${_('Network Installers')}<span class="prerelease-offer">${Markup(_('F%(rel)s %(state)s')) % {'rel':global_variables.release['next_id'], 'state':global_variables.release['curr_state']}}</span></h2>
         </div>
       </div>
@@ -186,7 +189,7 @@
           <p class="download"><a href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Workstation/x86_64/iso/Fedora-Workstation-netinst-x86_64-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso">${_('Download')}</a> | <a href="/static/checksums/Fedora-Workstation-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}-x86_64-CHECKSUM">${_('Verify')}</a></p>
           </div>
         </div>
-        <div class="white">
+<!--        <div class="white">
           <div class="col-sm-3">
           <img src="/static/images/workstation.png" />
           </div>
@@ -196,7 +199,7 @@
           <div class="col-sm-4">
           <p class="download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Workstation/i386/iso/Fedora-Workstation-netinst-i386-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso">${_('Download')}</a> | <a href="/static/checksums/Fedora-Workstation-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}-i386-CHECKSUM">${_('Verify')}</a></p>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
@@ -1180,7 +1183,7 @@
             <p class="download"><a href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Everything/x86_64/iso/Fedora-Everything-netinst-x86_64-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso">${_('Download')}</a> | <a href="/static/checksums/Fedora-Everything-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}-x86_64-CHECKSUM">${_('Verify')}</a></p>
             </div>
           </div>
-          <div class="white">
+<!--          <div class="white">
             <div class="col-md-1">
             <img src="/static/images/ev.png" />
             </div>
@@ -1193,7 +1196,7 @@
             <div class="col-md-4">
             <p class="download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Everything/i386/iso/Fedora-Everything-netinst-i386-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso">${_('Download')}</a> | <a href="/static/checksums/Fedora-Everything-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}-i386-CHECKSUM">${_('Verify')}</a></p>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
@@ -1222,7 +1225,7 @@
           <p class="download"><a href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Everything/x86_64/iso/Fedora-Everything-netinst-x86_64-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso">${_('Download')}</a> | <a href="/static/checksums/Fedora-Everything-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}-x86_64-CHECKSUM">${_('Verify')}</a></p>
           </div>
         </div>
-        <div class="white">
+<!--        <div class="white">
           <div class="col-xs-3">
           <img src="/static/images/ev.png" />
           </div>
@@ -1230,7 +1233,7 @@
           <h3>${_('Everything 32-bit')}</h3>
           <p class="download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Everything/i386/iso/Fedora-Everything-netinst-i386-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso">${_('Download')}</a> | <a href="/static/checksums/Fedora-Everything-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}-i386-CHECKSUM">${_('Verify')}</a></p>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
@@ -1260,7 +1263,7 @@
           <p class="download"><a href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Everything/x86_64/iso/Fedora-Everything-netinst-x86_64-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso">${_('Download')}</a> | <a href="/static/checksums/Fedora-Everything-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}-x86_64-CHECKSUM">${_('Verify')}</a></p>
           </div>
         </div>
-        <div class="white">
+<!--        <div class="white">
           <div class="col-sm-3">
           <img src="/static/images/ev.png" />
           </div>
@@ -1270,7 +1273,7 @@
           <div class="col-sm-4">
           <p class="download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Everything/i386/iso/Fedora-Everything-netinst-i386-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso">${_('Download')}</a> | <a href="/static/checksums/Fedora-Everything-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}-i386-CHECKSUM">${_('Verify')}</a></p>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
