typo in 32bit disclaimer

--- a/alt.fedoraproject.org/data/content/prerelease/index.html
+++ b/alt.fedoraproject.org/data/content/prerelease/index.html
@@ -50,7 +50,7 @@
     <div class="container using">
       <div class="row">
         <div class="col-xs-12 top-margin">
-        <p class="warning">${_('Are you looking for 32 bit images for F27 Beta? Due to some technical issues we cannot offer them, but they will be available for the F27 final release date. Stay tuned!')}</p>
+        <p class="warning">${_('Are you looking for 32 bit images of F27 Beta? Due to some technical issues we cannot offer them, but they will be available for the F27 final release date. Stay tuned!')}</p>
         <h2>${_('Network Installers')}<span class="prerelease-offer">${Markup(_('F%(rel)s %(state)s')) % {'rel':global_variables.release['next_id'], 'state':global_variables.release['curr_state']}}</span></h2>
         </div>
       </div>
