--- a/getfedora.org/data/content/workstation/prerelease/index.html
+++ b/getfedora.org/data/content/workstation/prerelease/index.html
@@ -51,7 +51,7 @@
                   </py:when>
                 </py:choose>
             </p>
-            <p class="warning">${_('Are you looking for 32 bit images for F27 Beta? Due to some technical issues we cannot offer them, but they will be available for the F27 final release date. Stay tuned!')}
+            <p class="warning">${_('Are you looking for 32 bit images of F27 Beta? Due to some technical issues we cannot offer them, but they will be available for the F27 final release date. Stay tuned!')}
             </p>
 
             <h3>${_('When is Fedora %s going to be released?') % global_variables.release['next_id']}</h3>
