drop 32bit images in labs.fpo, fix python-classroom screenshot and add disclaimer

--- a/labs.fedoraproject.org/data/content/prerelease.html
+++ b/labs.fedoraproject.org/data/content/prerelease.html
@@ -31,6 +31,7 @@
                   </py:when>
                 </py:choose>
             </p>
+            <p class="warning">${_('Are you looking for 32 bit images of F27 Beta? Due to some technical issues we cannot offer them, but they will be available for the F27 final release date. Stay tuned!')}</p>
         	</div>
   	  	  </div>
 
@@ -47,10 +48,10 @@
                 <a class="btn btn-success btn-pre" href="${global_variables.path['download_spins']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Labs/x86_64/iso/Fedora-Astronomy_KDE-Live-x86_64-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso" role="button">64-bit image</a>
                 <h5>${Markup(_('%s GB ISO Image')) % global_variables.iso_size['pre_x86_64_Live_Astronomy']}</h5>
               </div>
-              <div class="col-xs-6 text-center">
+<!--              <div class="col-xs-6 text-center">
                 <a class="btn btn-success btn-pre" href="${global_variables.path['download_arch']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Labs/i386/iso/Fedora-Astronomy_KDE-Live-i386-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso" role="button">32-bit image</a>
                 <h5>${Markup(_('%s GB ISO Image')) % global_variables.iso_size['pre_i686_Live_Astronomy']}</h5>
-              </div>
+              </div> -->
             </div>
            </div>
           </div>
@@ -69,10 +70,10 @@
     	  	  		<a class="btn btn-success btn-pre" href="${global_variables.path['download_spins']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Labs/x86_64/iso/Fedora-Design_suite-Live-x86_64-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso" role="button">64-bit image</a>
     	  	  		<h5>${Markup(_('%s GB ISO Image')) % global_variables.iso_size['pre_x86_64_Live_Design']}</h5>
   	  	  		</div>
-  	  	  		<div class="col-xs-6 text-center">
+<!--  	  	  		<div class="col-xs-6 text-center">
     	  	  		<a class="btn btn-success btn-pre" href="${global_variables.path['download_arch']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Labs/i386/iso/Fedora-Design_suite-Live-i386-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso" role="button">32-bit image</a>
     	  	  		<h5>${Markup(_('%s GB ISO Image')) % global_variables.iso_size['pre_i686_Live_Design']}</h5>
-  	  	  		</div>
+  	  	  		</div> -->
   	  	  	</div>
   	  	   </div>
   	  	  </div>
@@ -90,10 +91,10 @@
     	  	  		<a class="btn btn-success btn-pre" href="${global_variables.path['download_spins']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Labs/x86_64/iso/Fedora-Games-Live-x86_64-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso" role="button">64-bit image</a>
     	  	  		<h5>${Markup(_('%s GB ISO Image')) % global_variables.iso_size['pre_x86_64_Live_Games']}</h5>
   	  	  		</div>
-  	  	  		<div class="col-xs-6 text-center">
+<!--  	  	  		<div class="col-xs-6 text-center">
     	  	  		<a class="btn btn-success btn-pre" href="${global_variables.path['download_arch']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Labs/i386/iso/Fedora-Games-Live-i386-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso" role="button">32-bit image</a>
     	  	  		<h5>${Markup(_('%s GB ISO Image')) % global_variables.iso_size['pre_i686_Live_Games']}</h5>
-  	  	  		</div>
+  	  	  		</div> -->
   	  	  </div>
   	  	 </div>
   	   </div>
@@ -135,10 +136,10 @@
                 <a class="btn btn-success btn-pre" href="${global_variables.path['download_spins']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Labs/x86_64/iso/Fedora-Python-Classroom-Live-x86_64-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso" role="button">64-bit image</a>
                 <h5>${Markup(_('%s GB ISO Image')) % global_variables.iso_size['pre_x86_64_Live_Python']}</h5>
               </div>
-              <div class="col-xs-6 text-center">
+<!--              <div class="col-xs-6 text-center">
                 <a class="btn btn-success btn-pre" href="${global_variables.path['download_arch']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Labs/i386/iso/Fedora-Python-Classroom-Live-i386-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso" role="button">32-bit image</a>
                 <h5>${Markup(_('%s GB ISO Image')) % global_variables.iso_size['pre_i686_Live_Python']}</h5>
-              </div>
+              </div> -->
             </div>
            </div>
           </div>
@@ -157,10 +158,10 @@
     	  	  		<a class="btn btn-success btn-pre" href="${global_variables.path['download_spins']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Labs/x86_64/iso/Fedora-Robotics-Live-x86_64-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso" role="button">64-bit image</a>
     	  	  		<h5>${Markup(_('%s GB ISO Image')) % global_variables.iso_size['pre_x86_64_Live_Robotics']}</h5>
   	  	  		</div>
-  	  	  		<div class="col-xs-6 text-center">
+<!--  	  	  		<div class="col-xs-6 text-center">
     	  	  		<a class="btn btn-success btn-pre" href="${global_variables.path['download_arch']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Labs/i386/iso/Fedora-Robotics-Live-i386-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso" role="button">32-bit image</a>
     	  	  		<h5>${Markup(_('%s GB ISO Image')) % global_variables.iso_size['pre_i686_Live_Robotics']}</h5>
-  	  	  		</div>
+  	  	  		</div> -->
   	  	  	</div>
   	  	   </div>
   	  	  </div>
@@ -203,10 +204,10 @@
     	  	  		<a class="btn btn-success btn-pre" href="${global_variables.path['download_spins']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Labs/x86_64/iso/Fedora-Security-Live-x86_64-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso" role="button">64-bit image</a>
     	  	  		<h5>${Markup(_('%s GB ISO Image')) % global_variables.iso_size['pre_x86_64_Live_Security']}</h5>
   	  	  		</div>
-  	  	  		<div class="col-xs-6 text-center">
+<!--  	  	  		<div class="col-xs-6 text-center">
     	  	  		<a class="btn btn-success btn-pre" href="${global_variables.path['download_arch']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Labs/i386/iso/Fedora-Security-Live-i386-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso" role="button">32-bit image</a>
     	  	  		<h5>${Markup(_('%s GB ISO Image')) % global_variables.iso_size['pre_i686_Live_Security']}</h5>
-  	  	  		</div>
+  	  	  		</div> -->
   	  	  	</div>
   	  	   </div>
   	  	  </div>
@@ -225,9 +226,9 @@
             <div class="col-sm-4 col-xs-12">
               <a class="btn btn-default btn-topmargin" href="${path}/static/checksums/Fedora-Labs-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}-x86_64-CHECKSUM">${_('Validate 64bit!')}</a>
             </div>
-            <div class="col-sm-4 col-xs-12">
+<!--            <div class="col-sm-4 col-xs-12">
               <a class="btn btn-default btn-topmargin" href="${path}/static/checksums/Fedora-Labs-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}-i386-CHECKSUM">${_('Validate 32bit!')}</a>
-            </div>
+            </div> -->
           </div>
       </div>
     </div>
