fixup pre-rel warning paragraph about atomic
Reflect change of ownershift from cloud working group to the atomic
working group.

--- a/getfedora.org/data/content/atomic/prerelease/index.html
+++ b/getfedora.org/data/content/atomic/prerelease/index.html
@@ -45,7 +45,7 @@
     <div class="col-md-8 col-xs-12">
       <div class="row top-margin">
           <div class="col-xs-12">
-          <p class="warning">${Markup(_('This is pre-release software and is supported by the &lt;a href="%(team_url)s"&gt;Cloud Working Group&lt;/a&gt;. Please direct questions to their &lt;a href="%(team_list)s"&gt;mailing list&lt;/a&gt; or %(team_irc)s on freenode.') % {'team_url':'http://fedoraproject.org/wiki/Cloud', 'team_list':'https://lists.fedoraproject.org/mailman/listinfo/cloud', 'team_irc':'#fedora-cloud'})}
+          <p class="warning">${Markup(_('This is pre-release software and is supported by the &lt;a href="%(team_url)s"&gt; Atomic Working Group&lt;/a&gt;. Please direct questions to their &lt;a href="%(team_list)s"&gt;mailing list&lt;/a&gt; or %(team_irc)s on freenode.') % {'team_url':'https://fedoraproject.org/wiki/Atomic_WG', 'team_list':'https://lists.projectatomic.io/mailman/listinfo/atomic-devel', 'team_irc':'#atomic'})}
           ${Markup(_('All issues or bugs should be reported via the &lt;a href="%s"&gt;Red Hat Bugzilla&lt;/a&gt;. The Fedora Project makes no guarantees as to its suitability or usefulness.') % 'https://bugzilla.redhat.com/')}
         </p>
           </div>
