fix iso URL in alt.fpo-prerelease

--- a/alt.fedoraproject.org/data/content/prerelease/index.html
+++ b/alt.fedoraproject.org/data/content/prerelease/index.html
@@ -258,13 +258,13 @@
                 <h3 class="panel-title accordion-title visible-xs">
                   <img src="/static/images/server.png" />
                   ${_('Net')}
-                  <span class="mobile-download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_alt_id']}-${global_variables.release['curr_state']}/Server/aarch64/iso/Fedora-Server-netinst-aarch64-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_aarch64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify-prereleases.html">${_('Verify')}</a></span>
+                  <span class="mobile-download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}/Server/aarch64/iso/Fedora-Server-netinst-aarch64-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_aarch64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify-prereleases.html">${_('Verify')}</a></span>
                 </h3>
                 <div class="grey-hr"></div>
                 <h3 class="panel-title accordion-title hidden-xs">
                   <img src="/static/images/cloud.png" />
                   ${_('Fedora Cloud Netinstall')}
-                  <span class="download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_alt_id']}-${global_variables.release['curr_state']}/Cloud/aarch64/iso/Fedora-Cloud-netinst-aarch64-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_aarch64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify-prereleases.html">${_('Verify')}</a></span>
+                  <span class="download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}/Cloud/aarch64/iso/Fedora-Cloud-netinst-aarch64-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_aarch64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify-prereleases.html">${_('Verify')}</a></span>
                 </h3>
                 <h3 class="panel-title accordion-title visible-xs">
                   <img src="/static/images/cloud.png" />
@@ -327,7 +327,7 @@
                 <h3 class="panel-title accordion-title hidden-xs">
                   <img src="/static/images/server.png" />
                   ${_('Fedora Server DVD')}
-                  <span class="download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_alt_id']}-${global_variables.release['curr_state']}/Server/ppc64/iso/Fedora-Server-dvd-ppc64-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_ppc64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify-prereleases.html">${_('Verify')}</a></span>
+                  <span class="download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}/Server/ppc64/iso/Fedora-Server-dvd-ppc64-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_ppc64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify-prereleases.html">${_('Verify')}</a></span>
                 </h3>
                 <h3 class="panel-title accordion-title visible-xs">
                   <img src="/static/images/server.png" />
@@ -338,7 +338,7 @@
                 <h3 class="panel-title accordion-title hidden-xs">
                   <img src="/static/images/server.png" />
                   ${_('Fedora Server Netinstall')}
-                  <span class="download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_alt_id']}-${global_variables.release['curr_state']}/Server/ppc64/iso/Fedora-Server-netinst-ppc64-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_ppc64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify-prereleases.html">${_('Verify')}</a></span>
+                  <span class="download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}/Server/ppc64/iso/Fedora-Server-netinst-ppc64-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_ppc64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify-prereleases.html">${_('Verify')}</a></span>
                 </h3>
                 <h3 class="panel-title accordion-title visible-xs">
                   <img src="/static/images/server.png" />
@@ -349,7 +349,7 @@
                 <h3 class="panel-title accordion-title hidden-xs">
                   <img src="/static/images/cloud.png" />
                   ${_('Fedora Cloud Netinstall')}
-                  <span class="download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_alt_id']}-${global_variables.release['curr_state']}/Cloud/ppc64/iso/Fedora-Cloud-netinst-ppc64-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_ppc64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify-prereleases.html">${_('Verify')}</a></span>
+                  <span class="download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}/Cloud/ppc64/iso/Fedora-Cloud-netinst-ppc64-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_ppc64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify-prereleases.html">${_('Verify')}</a></span>
                 </h3>
                 <h3 class="panel-title accordion-title visible-xs">
                   <img src="/static/images/cloud.png" />
@@ -413,7 +413,7 @@
                 <h3 class="panel-title accordion-title hidden-xs">
                   <img src="/static/images/server.png" />
                   ${_('Fedora Server DVD')}
-                  <span class="download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_alt_id']}-${global_variables.release['curr_state']}/Server/ppc64le/iso/Fedora-Server-dvd-ppc64le-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_ppc64le']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify-prereleases.html">${_('Verify')}</a></span>
+                  <span class="download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}/Server/ppc64le/iso/Fedora-Server-dvd-ppc64le-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_ppc64le']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify-prereleases.html">${_('Verify')}</a></span>
                 </h3>
                 <h3 class="panel-title accordion-title visible-xs">
                   <img src="/static/images/server.png" />
