add checksum file for Atomic images

--- a/getfedora.org/data/content/atomic/prerelease/index.html
+++ b/getfedora.org/data/content/atomic/prerelease/index.html
@@ -319,6 +319,14 @@
 		      </div>
       <!-- end Base images -->
 
+          <h3>${_('Verify your Image')}</h3>
+            <p>${Markup(_('Once you have downloaded an image, verify it for security and integrity. To verify your image, start by downloading the proper CHECKSUM file into the same directory as the image you downloaded and follow &lt;a href="%s/%s/verify"&gt;these instructions&lt;/a&gt;.') % (path, lang))}</p>
+            <div class="row bottom-margin">
+              <div class="col-sm-6 col-xs-12">
+              <a class="btn btn-default btn-topmargin" href="${path}/static/checksums/Fedora-CloudImages-27-x86_64-20170929.n.0-CHECKSUM">${_('Validate!')}</a>
+              </div>
+            </div>
+
     <hr />
     <xi:include href="../../../templates/export-regulations.html" />
   </div>
